--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">GameDealz</string>
 
+    <string name="on">On</string>
+    <string name="since">since</string>
 </resources>
