Added about game information

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="prices">Prices</string>
     <string name="screenshots">Screenshots</string>
     <string name="shop">Shop</string>
+    <string name="about_game">About the Game</string>
 </resources>
