--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="since">since</string>
     <string name="search">Search</string>
     <string name="title_on_going_deals">Ongoing Deals</string>
+    <string name="title_submit_error_report">Submit Error Report</string>
     <string name="retry">Retry</string>
     <string name="results_empty">Returned results were empty.</string>
     <string name="current_best">Current Best:</string>
@@ -13,4 +14,11 @@
     <string name="screenshots">Screenshots</string>
     <string name="shop">Shop</string>
     <string name="about_game">About the Game</string>
+
+    <!-- Error Activity -->
+    <string name="sorry">Sorry, that should not have happened.</string>
+    <string name="what_happened">What happened:</string>
+    <string name="your_comment">Your comment:</string>
+    <string name="additional_info">Additional Information…</string>
+    <string name="error_report_button_text">Report via E-Mail</string>
 </resources>
