--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,12 @@
     <string name="screenshots">Screenshots</string>
     <string name="shop">Shop</string>
     <string name="about_game">About the Game</string>
-    <string name="add_to_watch_list">Add to watch list</string>
+    <string name="add_to_watch_list">Add to Watchlist</string>
     <string name="filter_sort_by">Sort by</string>
+
+    <string name="watchlist_error_empty_price">Empty target price!</string>
+    <string name="watchlist_error_wrong_number_format">Wrong number format.</string>
+
     <!-- Error Activity -->
     <string name="sorry">Sorry, that should not have happened.</string>
     <string name="what_happened">What happened:</string>
@@ -25,6 +29,7 @@
     <string name="additional_info">Additional Information…</string>
     <string name="error_report_button_text">Report via E-Mail</string>
 
-    <string name="notify_when_price_reaches">Notify me when the price reaches below</string>
+    <string name="notify_when_price_reaches">Notify me when %s price reaches below…</string>
     <string name="notify_when_price_reaches_subtitle">A notification will be displayed when the price reaches the specified threshold.</string>
+    <string name="on_the_following_stores">On the following stores</string>
 </resources>
