--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
 
     <string name="watchlist_error_empty_price">Empty target price!</string>
     <string name="watchlist_error_wrong_number_format">Wrong number format.</string>
+    <string name="watchlist_error_stores">You have to select stores to be able to add to the Watchlist.</string>
+    <string name="watchlist_general_error">Failed to save %1$s to Watchlist. Error: %2$s</string>
     <string name="watchlist_already_better_deal">There is already better deal than your target price! (%1$s at %2$s)</string>
 
     <!-- Error Activity -->
