--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="add_to_watch_list">Add to Watchlist</string>
     <string name="filter_sort_by">Sort by</string>
 
+    <string name="watchlist_added_successfully">%s was added successfully to your Watchlist</string>
+    <string name="watchlist_remove_successfully">%s was removed successfully from your Watchlist</string>
     <string name="watchlist_error_empty_price">Empty target price!</string>
     <string name="watchlist_error_wrong_number_format">Wrong number format.</string>
     <string name="watchlist_error_stores">You have to select stores to be able to add to the Watchlist.</string>
