Move Details feature into its own module

--- a/common-ui/src/main/res/values/strings.xml
+++ b/common-ui/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="since">since</string>
     <string name="retry">Retry</string>
     <string name="results_empty">Returned results were empty.</string>
+    <string name="current_best">Current Best:</string>
+    <string name="check_on">Check On %s</string>
+    <string name="historical_low">Historical low was</string>
+    <string name="sort_current_best">Current Best</string>
+    <string name="sort_historical_low">Historical Low</string>
+    <string name="prices">Prices</string>
 </resources>
