--- a/features/detail/src/main/res/values/strings.xml
+++ b/features/detail/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="watchlist_remove_successfully">%s was removed successfully from your Watchlist</string>
     <string name="dialog_ask_remove_from_watch_list"><![CDATA[Are you sure that you want to remove <b>%s</b> from your Watchlist?]]></string>
     <string name="about_game">About the Game</string>
+    <string name="screenshots">Screenshots</string>
 </resources>
