--- a/features/home/src/main/res/values/strings.xml
+++ b/features/home/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="miscellaneous">Miscellaneous</string>
     <string name="sign_in">Sign in</string>
     <string name="welcome_user">Welcome %s!</string>
+    <string name="welcome_user_unknown">Welcome!</string>
+    <string name="signed_in">Signed In</string>
     <string name="log_out">Logout</string>
     <string name="signed_out">You\'ve been signed out from your account</string>
     <string name="failed_to_authorize_user">Failed to authorize user. Reason: %s</string>
